--- a/index.html
+++ b/index.html
@@ -13,7 +13,38 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Tuesday 21:00</li>
+          <li>clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-3">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="partly_cloudy"
+            />
+            13°C |°F
+          </div>
+          <div class="col-3">
+            <ul>
+              <li>precipitation: 2%</li>
+              <li>humidity 81%</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/RenateSunu/Weather-app-vanilla"
+          target="_blank"
+          >Open source code</a
+        >
+        by Renaté Sunu</small
+      >
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
