styled css main area

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="src/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap"
+      rel="stylesheet"
     />
     <title>Weather App</title>
   </head>
@@ -21,29 +26,29 @@
           <li>clear</li>
         </ul>
         <div class="row">
-          <div class="col-3">
+          <div class="col-6">
             <img
               src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
               alt="partly_cloudy"
             />
             13°C |°F
           </div>
-          <div class="col-3">
+          <div class="col-6">
             <ul>
               <li>precipitation: 2%</li>
               <li>humidity 81%</li>
             </ul>
           </div>
         </div>
-      </div>
-      <small>
-        <a
-          href="https://github.com/RenateSunu/Weather-app-vanilla"
-          target="_blank"
-          >Open source code</a
+        <small>
+          <a
+            href="https://github.com/RenateSunu/Weather-app-vanilla"
+            target="_blank"
+            >Open source code</a
+          >
+          by Renaté Sunu</small
         >
-        by Renaté Sunu</small
-      >
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
