--- a/index.html
+++ b/index.html
@@ -20,24 +20,30 @@
   <body>
     <div class="container">
       <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Tuesday 21:00</li>
-          <li>clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              alt="partly_cloudy"
-            />
-            13°C |°F
-          </div>
-          <div class="col-6">
+        <div class="wrapper">
+          <div class="overview">
+            <h1>New York</h1>
             <ul>
-              <li>precipitation: 2%</li>
-              <li>humidity 81%</li>
+              <li>Tuesday 21:00</li>
+              <li>clear</li>
             </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt="partly_cloudy"
+                />
+              </div>
+              <div class="weather-temperature"><strong>13</strong>°C |°F</div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>precipitation: 2%</li>
+                <li>humidity 81%</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
