--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
-              <li>Tuesday 21:00</li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
           </div>
@@ -44,8 +44,8 @@
             </div>
             <div class="col-6">
               <ul>
-                <li>precipitation: 2%</li>
-                <li>humidity 81%</li>
+                <li>humidity <span id="humidity"></span>%</li>
+                <li>wind <span id="wind"></span>km/H</li>
               </ul>
             </div>
           </div>
