--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                  alt="partly_cloudy"
-                />
+                <img src="alt" ="partly_cloudy" id="icon" />
               </div>
               <div class="weather-temperature">
                 <strong id="temperature"></strong>°C |°F
